@@ -1,6 +1,7 @@
 ValgrindLaunchConfigurationDelegate.Error_starting_process=Error starting process
 ValgrindLaunchConfigurationDelegate.Profiling_Local_CCPP_Application=Profiling Local C/C++ Application
 ValgrindLaunchConfigurationDelegate.Saving_Valgrind_output=Saving Valgrind output
+ValgrindLaunchConfigurationDelegate.Please_ensure_Valgrind=Please ensure Valgrind is installed and in your path.
 ValgrindLaunchPlugin.Cannot_retrieve_delegate=Cannot retrieve delegate from extension
 ValgrindLaunchPlugin.Cannot_retrieve_page=Cannot retrieve page from extension
 ValgrindOptionsTab.Basic_Options=Basic Options
